<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="10dp"
                    android:layout_centerInParent="true"
                    app:srcCompat="@drawable/aku" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Dibuat Oleh Firmansyah (1818090)"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="Mahasiswa Teknik Informatika
                        Institut Teknologi Nasional Malang"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="Angkatan 2018"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Tujuan pembuatan aplikasi ini adalah
                untuk menyelesaikan Skripsi yang saya kerjakan berjudul"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="''Rancang Bangun Pekarangan Pangan Lestari (P2L) Berbasis Internet Of Things''"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Tutorial Cara Menggunakan Aplikasi Pekarangan Pangan Lestari bisa di akses"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tutorial_aplikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/tutorial_aplikasi"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Rancangan Pembuatan Alat Otomatisasi Pekarangan Pangan Lestari"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tutorial_alat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/tutorial_alat"
                android:textAlignment="center"
                android:textColor="@color/zircon"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Kontak Kami"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:textStyle="bold" />

             <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">



                <ImageView
                    android:id="@+id/ig"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="1dp"
                    android:layout_centerInParent="true"
                    android:text="@string/ig"
                    app:srcCompat="@drawable/ig" />

                 <ImageView
                     android:id="@+id/wa"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginLeft="1dp"
                     android:layout_marginTop="1dp"
                     android:layout_centerInParent="true"
                     app:srcCompat="@drawable/wa" />

             </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>